# pyteleinfo

./: .bumpversion.cfg  .flake8  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .pylintrc  .releaserc.json  .sgcrc  .travis.yml  CHANGES.rst  LICENSE  MANIFEST.in  Makefile  README.md  call_invoke.sh  captured_frames.txt  invoke.yaml  justfile  mkdocs.yml  mypy.ini  pyproject.toml  setup.cfg  setup.py  tasks.py  tox.ini
.claude/: settings.local.json
.claude/commands/cl/: create_plan.md
.github/workflows/: ci.yml  publish.yml
docs/: api.rst  conf.py  conf_old.py  development.rst  gen_ref_pages.py  index.md  index.rst  teleinfo-protocol.md  teleinfo-trames-bleues.md
docs/_themes/kr/static/: flasky.css_t
py.requirements/: README.txt  all.txt  basic.txt  ci.travis.txt  develop.txt  docs.txt  json.txt  testing-basic.txt  testing-extra.txt  testing.txt
src/teleinfo/: __init__.py  __version__.py  codec.py  const.py  exceptions.py  serial_reader.py  settings.py
src/teleinfo/console/: __init__.py  application.py  commands.py
tasks/: __behave.py  __init__.py  __main__.py  _compat_shutil.py  _dry_run.py  _setup.py  _tasklet_cleanup.py  clean.py  docs.py  py.requirements.txt  python.py  release.py  test.py
teleinfo/: __init__.py  __version__.py  codec.py  const.py  exceptions.py
teleinfo/console/: __init__.py  application.py  commands.py  port_command.py  utils.py
teleinfo/serial_asyncio/: __init__.py
tests/: __init__.py  conftest.py  test_sensor.py
tests/aioteleinfo/: conftest.py  test_aioteleinfo.py  test_codec.py
tests/teleinfo/: conftest.py  test_codec.py  test_serial_reader.py  test_teleinfo.py
tests/teleinfo/console/: test_commands.py
