# Largely inspired from (pointing to precise version)
# https://github.com/thejohnfreeman/project-template-python/tree/6d04c7b3b00460bb7473246096c52cc22d403226

[project]
name = "pyteleinfo"
version = "0.0.0-dev"
description = ""
authors = [
    {name = "Emmanuel Sciara", email = "emmanuel.sciara@gmail.com"}
]
readme = "README.rst"
requires-python = ">=3.12"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Natural Language :: English",
    "Operating System :: POSIX",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Communications",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Terminals :: Serial",
    "License :: OSI Approved :: BSD License",
]
dependencies = [
    "pyserial>=3.5",
    "cleo>=0.8",
    "pyserial-asyncio>=0.6",
]

[project.optional-dependencies]
dev = [
    "tox>=3.14",
    "tox-pyenv>=1.1",
    "rope>=1.0",
    "yapf>=0.30",
    "nest-asyncio>=1.5.4",
    "pytest>=7.2.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.2",
    "pytest-html>=3.1",
    "pytest-asyncio>=0.20",
    "behave4git>=0.1",
    "PyHamcrest>=2.0",
    "flake8>=5.0",
    "flake8-bugbear>=22.10",
    "pydocstyle>=6.1",
    "pylint>=2.15",
    "mypy>=1.0",
    "types-python-slugify>=5.0",
    "isort>=5.0",
    "black>=22.10",
    "ruff>=0.8.0",
    "sphinx>=4.2",
    "sphinx-autodoc-typehints>=1.10",
    "sphinx-autobuild>=2021.0",
    "sphinx-rtd-theme>=1.0",
    "sphinx-bootstrap-theme>=0.8.0",
    "m2r>=0.3",
    "bpython>=0.20",
]

[project.scripts]
teleinfo = "teleinfo.console:main"

[tool.pytest.ini_options]
minversion = "7.0"
addopts = "--cov=src --cov-report html:reports/python/htmlcov --cov-report xml:reports/python/coverage.xml --cov-report=term --junitxml=reports/python/xunit.xml --ignore=src"
testpaths = [
    "tests",
]
asyncio_mode = "strict"


# following black's doc for compatibility
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#pylint
[tool.pylint.messages_control]
disable = "C0114, C0116, wrong-import-order, missing-class-docstring, W1203, W0511"

[tool.pylint.redefined-outer-name]
ignore = "tests"

[tool.pylint.format]
max-line-length = "120"


[tool.isort]
# following black's doc for compatibility
# See https://black.readthedocs.io/en/stable/guides/using_black_with_other_tools.html#isort
profile = "black"
line_length = 120


[tool.black]
target_version = ["py312"]
line-length = 120

[tool.ruff]
# Target Python 3.12+
target-version = "py312"
line-length = 120

[tool.ruff.lint]
# Enable isort rules for import sorting
select = ["I"]

[tool.ruff.lint.isort]
# Configure import sorting to match isort's black profile
force-single-line = false
force-sort-within-sections = false
lines-after-imports = 2
known-first-party = ["teleinfo"]


[tool.uv.sources]

[tool.hatch.build.targets.wheel]
packages = ["src/teleinfo"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
